# graphics

assignment04/: CMakeLists.txt  demo_graphics_JLZM.pptx
assignment04/scenes/: 01_simply_clamp.json  01_textured_nontiling.json  02_quad_lignt.json  05_materials_simple.json  08_blurry_reflection.json  09_russian_0.1.json  10_normal_mapping.json  11_mip_map.json  12_depth_of_field.json  13_cool_scene.json  14_cool_firehydrant.json  15_suggestion_bigpic_timer.json  demo.json  demo_noblurry.json  demo_nodepth.json  demo_nomapping.json
assignment04/scenes/models/: FireHydrant.json  klein_bottle.json  klein_bottle_2.json  test.json  various-eggs.json
assignment04/src/apps/: 04_pathtrace.cpp  CMakeLists.txt
assignment04/src/common/: CMakeLists.txt  animation.cpp  intersect.cpp  intersect.h  montecarlo.h  scene.cpp  scene.h
